--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>PWA</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="src/css/style.css">
+    <link rel="manifest" href="/manifest.json">
 </head>
 
 <body>
